# prop

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/agents/: _collaboration.md  agent-builder.md  compliance.md  design.md  devops.md  integrations.md  qa.md  schema.md
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/owner/: layout.tsx  page.tsx
apps/web/app/pm/: layout.tsx  page.tsx
apps/web/app/t/: layout.tsx  page.tsx
apps/web/components/: ThemeToggle.tsx
apps/web/components/marketing/: AgentSections.tsx  ClosingCta.tsx  ComplianceMoat.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Pricing.tsx  ProblemFraming.tsx  Quotes.tsx  ScrollDashboardDemo.tsx  Trust.tsx
apps/web/components/owner/: OwnerShell.tsx
apps/web/components/pm/: PMShell.tsx
apps/web/components/tenant/: TenantShell.tsx
docs/: plan.md
docs/design/: 01-design-system.md  02-journeys.md  03-landing-page.md  04-motion.md
docs/research/: 01-pm-workflows.md  02-competitive-teardown.md  03-ca-compliance.md  04-design-references.md
rules/ca/: ab-12-deposit-cap.yaml  ab-1482-rent-cap.yaml  civ-1947-3-cash-refusal.yaml  civ-1954-entry-notice.yaml  late-fee-reasonableness.yaml
services/agents/: .env.example  Dockerfile  pyproject.toml  runbook.md
services/agents/app/: main.py  schemas.py
services/agents/app/agents/: compliance.py  diagnosis.py  knowledge.py  ledger.py  triage.py
tools/: screenshot-dark.mjs  screenshot.mjs
(+5 files in other folders)
