[project]
name = "stoa-agents"
version = "0.0.0"
description = "AI agent service for Stoa property management platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.42.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "asyncpg>=0.30.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "langfuse>=2.56.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]  # asserts ok in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
